# SHIELD-1

./: .gitignore  APP_ROBUSTNESS_ANALYSIS.md  AUDIT.md  BEFORE_AFTER_COMPARISON.md  BUILD_SUCCESS.md  CLEAR_HONEYFILES_BUTTON.md  COMPREHENSIVE_SECURITY_AUDIT.md  COMPREHENSIVE_TECHNICAL_AUDIT.md  CRITICAL_FIXES_APPLIED.md  DATABASE_FIX_SUMMARY.md  DATABASE_ROBUSTNESS_ANALYSIS.md  EVENT_LOGS_DIAGNOSTICS.md  EVENT_PIPELINE_DEBUG_REPORT.md  EVENT_PIPELINE_FIX_SUMMARY.md  EVENT_PIPELINE_VERIFICATION.md  EXECUTIVE_SUMMARY.md  FEATURES.md  FINAL_SUMMARY.md  FIX_PLAN.md  FLOW_AND_MODEA.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LOG_VIEWER_GUIDE.md  MATHEMATICAL_CORRECTNESS_ANALYSIS.md  NETWORK_FEATURES_ANALYSIS.md  NETWORK_FIX_SUMMARY.md  ONE_CLICK_PROTECTION.md  PHASE_7_FIXES_AND_FINAL_RATING.md  PSEUDO_KERNEL_IMPLEMENTATION_SUMMARY.md  PSEUDO_KERNEL_PHASE1_ANALYSIS.md  QUICK_FIXES.md  QUICK_REFERENCE.md  README.md  REPORT.md  SECURITY_FIXES_COMPLETE.md  SECURITY_FIXES_IMPLEMENTATION.md  SECURITY_ISSUES_SUMMARY.md  SHIELD_Analysis_Report.html  SHIELD_DATASET_REQUIREMENTS.md  SHIELD_Fix_Report.html  (+51 more)
app/: CMakeLists.txt  build.gradle.kts  key_info.txt  key_info_utf8.txt  release.jks
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: slide_down_to_bottom.xml  slide_up_from_bottom.xml
app/src/main/res/drawable/: bg_badge_pill.xml  bg_bottom_sheet_scan.xml  bg_button_frosted.xml  bg_button_frosted_circle.xml  bg_button_get_started.xml  bg_button_neon.xml  bg_button_neumorphic.xml  bg_button_neumorphic_circle.xml  bg_button_primary_glow.xml  bg_premium.xml  (+45 more)
(+266 files in other folders)
